Update Fake Claim Classification using BERT-base with CNN.ipynb

--- a/Fake Claim Classification using BERT-base with CNN.ipynb
+++ b/Fake Claim Classification using BERT-base with CNN.ipynb
@@ -52,9 +52,9 @@
       },
       "source": [
         "import pandas as pd\n",
-        "df=pd.read_csv(\"/content/drive/My Drive/Bibek/LIAR-DATASET ORIGINAL/final/train_final-02.csv\")\n",
-        "df_test=pd.read_csv(\"/content/drive/My Drive/Bibek/LIAR-DATASET ORIGINAL/final/test_final.csv\")\n",
-        "df_valid=pd.read_csv(\"/content/drive/My Drive/Bibek/LIAR-DATASET ORIGINAL/final/valid_final.csv\")\n",
+        "df=pd.read_csv(\"/Users/reshmamanoj/Desktop/SentimentalLIAR-master 2/train_final-02.csv\")\n",
+        "df_test=pd.read_csv(\"/Users/reshmamanoj/Desktop/SentimentalLIAR-master 2/test_final.csv\")\n",
+        "df_valid=pd.read_csv(\"/Users/reshmamanoj/Desktop/SentimentalLIAR-master 2/valid_final.csv\")\n",
         "print(\"before truncating size of data is :\", df.shape, df_test.shape,df_valid.shape)\n",
         "df=df[:10232]\n",
         "df_test=df_test[:1264]\n",
@@ -578,7 +578,7 @@
         "  print(f\"\\n \\t Epoch {epoch} : Train Loss (Training Data):{train_loss}, Validation Loss (Testing Data): {val_loss}\")\n",
         "  print(\"_________________________________________________\\n\")\n",
         "  #if train_loss > val_loss:\n",
-        "  # torch.save(model.state_dict(), \"/content/drive/My Drive/Bibek/models_saved/w9p7\")\n",
+        "  # torch.save(model.state_dict(), \"//Users/reshmamanoj/Desktop/SentimentalLIAR-master 2/models_saved/w9p7\")\n",
         "  "
       ],
       "execution_count": null,
@@ -622,7 +622,7 @@
         "from pandas import DataFrame\n",
         "df=DataFrame(train_losses,columns=['train_losses'])\n",
         "df=DataFrame(val_losses,columns=['val_losses'])\n",
-        "df.to_csv(\"/content/drive/My Drive/Bibek/Results/w10_p4.csv\")\n"
+        "df.to_csv(\"/Users/reshmamanoj/Desktop/SentimentalLIAR-master 2/Results/w10_p4.csv\")\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -649,7 +649,7 @@
         "plt.title('Training Loss VS Validation Loss', fontsize=15)\n",
         "\n",
         "plt.legend()\n",
-        "plt.savefig('/content/drive/My Drive/Bibek/Results/w10_p4-epoch1.eps')\n",
+        "plt.savefig('/Users/reshmamanoj/Desktop/SentimentalLIAR-master 2/Results/w10_p4-epoch1.eps')\n",
         "\n",
         "#plt.title(\"Losses\")"
       ],
